:construction_worker: Remove py3.9 from workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     uses: ./.github/workflows/ci_template.yml
     with:
       os: '["ubuntu-latest", "windows-latest", "macos-latest"]'
-      python-version: '["3.9", "3.10", "3.11", "3.12"]'
+      python-version: '["3.10", "3.11", "3.12"]'
 
   build-wheel:
     needs: test
