--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,5 +5,18 @@ on:
   pull_request:
 
 jobs:
+  build-wheel:
+    needs: test
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - uses: hynek/build-and-inspect-python-package@v2
+      with:
+        attest-build-provenance-github: true
+        
   test:
     uses: ./.github/workflows/ci_template.yml
