--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,7 @@ on:
   pull_request:
 
 jobs:
-  test:
-    uses: ./.github/workflows/ci_template.yml
-  
   build-wheel:
-    needs: test
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
@@ -20,3 +16,9 @@ jobs:
     - uses: hynek/build-and-inspect-python-package@v2
       with:
         attest-build-provenance-github: true
+
+  test:
+    needs: build-wheel
+    uses: ./.github/workflows/ci_template.yml
+  
+  
