--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ requires = [
 name = "swmmanywhere"
 description = "SWMManywhere software"
 readme = "README.md"
-license-files = { paths = ["LICENSE", "src/netcomp/LICENSE.txt"] }
 authors = [
     { name = "Barnaby Dobson", email = "b.dobson@imperial.ac.uk" },
     { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" }
@@ -91,6 +90,10 @@ packages = [ "src" ]
 [tool.hatch.build.targets.wheel]
 only-include = ["src"]
 sources = ["src"]
+
+[tool.hatch.metadata]
+license = "BSD-3-clause"  # Or your primary license name
+license-files = ["LICENSE", "src/netcomp/LICENSE.txt"]
 
 [tool.hatch.version]
 source = "vcs"
