--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ readme = "README.md"
 license-files = { paths = ["LICENSE", "src/netcomp/LICENSE.txt"] }
 authors = [
     { name = "Barnaby Dobson", email = "b.dobson@imperial.ac.uk" },
-    { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" }
+    { name = "Diego Alonso-Álvarez", email = "d.alonso-alvarez@imperial.ac.uk" },
+    { name = "Taher Chegini", email = "tchegini@purdue.edu" },
 ]
 requires-python = ">=3.10"
 classifiers = [
