--- a/.github/workflows/ci_template.yml
+++ b/.github/workflows/ci_template.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Run tests
       run: pytest --junitxml=junit/pytest.xml \
-        --cov=swmmanywhere \
+        --cov=src/swmmanywhere \
         --cov-branch \
         --cov-report=xml
 
@@ -39,7 +39,6 @@ jobs:
       if: success() && (github.event_name == 'push' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10')
       uses: codecov/codecov-action@v4
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: false
-        files: ./coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
         verbose: true
