--- a/.github/workflows/ci_template.yml
+++ b/.github/workflows/ci_template.yml
@@ -30,10 +30,7 @@ jobs:
       run: pip install .[dev]
 
     - name: Run tests
-      run: pytest --junitxml=junit/pytest.xml \
-        --cov=src/swmmanywhere \
-        --cov-branch \
-        --cov-report=xml
+      run: pytest
 
     - name: Upload coverage to Codecov
       if: success() && (github.event_name == 'push' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10')
