--- a/.github/workflows/ci_template.yml
+++ b/.github/workflows/ci_template.yml
@@ -33,9 +33,9 @@ jobs:
       run: pytest
 
     - name: Upload coverage to Codecov
-      if: success() && (github.event_name == 'push' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10')
+      if: success() && (matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10')
       uses: codecov/codecov-action@v4
       with:
-        fail_ci_if_error: false
+        fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
         verbose: true
