Add coverage report to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,4 +61,4 @@ nav:
     - Post processing: reference-post-processing.md
     - Preprocessing: reference-preprocessing.md
     - Config definitions: reference-defs.md
-  - Coverage report: coverage.md
+  - Coverage report: https://app.codecov.io/gh/ImperialCollegeLondon/SWMManywhere
