--- a/.github/workflows/ci_template.yml
+++ b/.github/workflows/ci_template.yml
@@ -37,5 +37,5 @@ jobs:
       uses: codecov/codecov-action@v4
       with:
         fail_ci_if_error: true
-        token: ${{ secrets.CODECOV_TOKEN }}
+        token: testing_abc123
         verbose: true
