--- a/.github/workflows/ci_template.yml
+++ b/.github/workflows/ci_template.yml
@@ -2,6 +2,9 @@ name: Test
 
 on: 
   workflow_call:
+    secrets:
+      codecov_token:
+        required: true
     inputs:
       os:
         description: 'Operating system'
@@ -34,7 +37,7 @@ jobs:
 
     - name: Upload coverage to Codecov
       if: success() && (matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10')
-      uses: codecov/codecov-action@v4.4.0
+      uses: codecov/codecov-action@v4
       with:
         fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
