--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,10 @@ dynamic = [
   "version",
 ]
 dependencies = [
-  "cdsapi",
+  "adlfs",
   "cytoolz",
   "folium",
+  "fsspec",
   "geopandas>=1",
   "geopy",
   "joblib",
@@ -62,6 +63,7 @@ dependencies = [
   "shapely",
   "tqdm",
   "xarray",
+  "zarr",
 ]
 optional-dependencies.dev = [
   "mypy",
