--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ optional-dependencies.doc = [
   "mkdocs-material",
   "mkdocs-material-extensions",
   "mkdocstrings[python]",
+  "pandoc",
   "pypandoc",
 ]
 urls.Documentation = "https://imperialcollegelondon.github.io/SWMManywhere/"
