--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ extra_javascript:
 
 nav:
   - Home: index.md
-  - About: ./paper/paper.pdf
+  - About: ./paper/paper.md
   - Quickstart: quickstart.md
   - Guides:
     - Configuration guide: config_guide.md
