--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
     - Extended demo: ./notebooks/extended_demo.py
     - Parameters guide: parameters_guide.md
     - Graph functions: graphfcns_guide.md
+    - Real world demo: ./notebooks/validation_demo.py
     - Metrics guide: metrics_guide.md
   - Contributing: CONTRIBUTING.md
   - API reference:
