--- a/src/swmmanywhere/defs/swmm_conversion.yml
+++ b/src/swmmanywhere/defs/swmm_conversion.yml
@@ -36,7 +36,7 @@ COORDINATES:
   iwcolumns: [id, x, y]
 VERTICES: 
   columns: [Name, X, Y]
-  columns: [id, x, y]
+  iwcolumns: [id, x, y]
 Polygons: 
   columns: [Name, X, Y]
   iwcolumns: [subcatchment, x, y]
